load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
# load("//tools:ts_library.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

# gazelle:exclude node_modules
# gazelle:build_file_name BUILD.bazel,BUILD
# gazelle:prefix github.com/oswee/prime
gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

# Expose these files for the other Bazel downstream rules to use
# https://bazelbuild.github.io/rules_nodejs/TypeScript.html
# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
exports_files(
    [
        "tsconfig.json",
        "tsconfig.base.json",
        # Stylelint and prettier config are neeeded for style linting
        ".stylelintrc.js",
        ".prettierrc.js",
        "package.json",
    ],
    visibility = ["//visibility:public"],
)

# TODO: This is only here in order to workaround a bug in the way bazel resolves
# workspace imports when in nested repositories, and can be removed once that is fixed.
# ts_library(
#     name = "modules-fix",
#     srcs = [],
#     module_name = "@oswee",
# )
