"""
Oswee
"""

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# package(default_visibility = ["//:__subpackages__"])
package(default_visibility = ["//visibility:public"])

# gazelle:exclude node_modules
# gazelle:build_file_name BUILD.bazel,BUILD
# gazelle:prefix github.com/oswee/oswee
gazelle(
    name = "gazelle",
)

# To automatically format all .bzl files and all BUILD.bzl files, run:
#    bazelisk run //:buildifier
# or
#    yarn bazel run //:buildifier
buildifier(
    name = "buildifier",
    exclude_patterns = ["node_modules"],
)

buildifier(
    name = "buildifier_check",
    exclude_patterns = ["node_modules"],
    mode = "check",
)

# Expose these files for the other Bazel downstream rules to use
# https://bazelbuild.github.io/rules_nodejs/TypeScript.html
# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
exports_files(
    [
        # Stylelint and prettier config are neeeded for style linting
        ".stylelintrc.js",
        ".prettierrc.js",
        "package.json",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "tsconfig.base.json",
    actual = "//javascript:tsconfig.base.json",
)

alias(
    name = "tsconfig.json",
    actual = "//javascript:tsconfig.json",
)
