"""
test
"""

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "namespace",
    cluster = "minikube",
    template = "src/namespace.yaml",
)

k8s_object(
    name = "secret",
    cluster = "minikube",
    template = "src/secret.yaml",
)

k8s_object(
    name = "registry_key_secret",
    cluster = "minikube",
    template = "src/registry-key-secret.yaml",
)

k8s_object(
    name = "persistent_volume",
    cluster = "minikube",
    template = "src/pv.yaml",
)

k8s_object(
    name = "metallb_config_map",
    cluster = "minikube",
    template = "src/metallb-config-map.yaml",
)

k8s_objects(
    name = "all",
    objects = [
        ":namespace",
        ":secret",
        ":registry_key_secret",
        ":persistent_volume",
        ":metallb_config_map",
    ],
    visibility = ["//visibility:public"],
)
