load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("//tools:ts_library.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "public",
    srcs = glob([
        "src/public/template.html",
        "src/public/favicon.ico",
    ]),
)

ts_library(
    name = "example",
    srcs = glob(
        [
            "src/**/*.ts",
        ],
        exclude = ["webpack.dev.ts"],
    ),
    data = [
        # ":tsconfig",
        "//apps/front/src/scss",
    ],
    tsconfig = ":tsconfig",
    # extends = ["//:tsconfig.base.json"],
    # extends = [":tsconfig"],
    deps = [
        "//libs/action",
        "//libs/connect",
        "@npm//@types/node",
        "@npm//history",
        "@npm//lit-element",
        "@npm//lit-html",
        "@npm//redux-dynamic-modules-core",
        "@npm//redux-dynamic-modules-saga",
        # "@npm//redux-dynamic-modules",
        "@npm//immer",
        "@npm//redux-saga",
        "@npm//tslib",
    ],
)

# The "bundler" is thought of as an application, and has it's own deps.
# This effectively webpack + webpack.config.js.
ts_library(
    name = "config",
    srcs = ["webpack.dev.ts"],
    tsconfig = ":tsconfig",
    deps = [
        "//tools/webpack",
        "@npm//@types/html-webpack-plugin",
        "@npm//@types/node",
        "@npm//@types/webpack",
        "@npm//css-loader",
        "@npm//html-webpack-plugin",
        "@npm//style-loader",
        "@npm//umd-compat-loader",
        "@npm//webpack",
    ],
)

nodejs_binary(
    name = "devserver",
    data = [
        "src/public/favicon.ico",
        ":config",
        ":example",
        ":public",
        "@oswee//tools/webpack",
    ],
    entry_point = "@oswee//tools/webpack:src/devserver.ts",
    tags = [
        "ibazel_notify_changes",
    ],
    templated_args = [
        "--output=./[hash].bundle.js",
        "--entry=oswee/apps/front/src/index",
        "--mode=development",
        "--config=oswee/apps/front/webpack.dev.js",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.app.json",
    deps = [
        "//:tsconfig.base.json",
        "tsconfig.json",
    ],
)
