load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "ui-statusbar",
    srcs = glob(
        include = [
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/*.spec.ts",
        ],
    ),
    module_name = "@oswee/components/ui-statusbar",
    module_root = "src",
    devmode_module = "esnext",
    devmode_target = "esnext",
    tsconfig = "tsconfig",
    deps = [
      "@npm//lit-element",
      "@npm//tslib",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.base.json",
        "tsconfig.json",
    ],
)
