load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "ui-taskbar",
    srcs = glob(
        include = [
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/*.spec.ts",
        ],
    ),
    devmode_module = "esnext",
    devmode_target = "esnext",
    module_name = "@oswee/components/ui-taskbar",
    module_root = "src",
    tsconfig = "tsconfig",
    deps = [
        "@npm//lit",
        "@npm//tslib",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
