load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "action",
    srcs = glob(
        include = [
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    devmode_module = "esnext",
    devmode_target = "esnext",
    module_name = "@oswee/lib/action",
    module_root = "src",
    tsconfig = "tsconfig",
    deps = [
        "@npm//redux",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
