"""
Rules to configure development cluster
"""

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "namespace",
    cluster = "minikube",
    template = "namespace.yaml",
)

k8s_object(
    name = "registry_key_secret",
    cluster = "minikube",
    template = "registry-key-secret.yaml",
)

k8s_object(
    name = "metallb_config_map",
    cluster = "minikube",
    template = "metallb-config-map.yaml",
)

k8s_objects(
    name = "all",
    objects = [
        ":namespace",
        ":registry_key_secret",
        ":metallb_config_map",
    ],
    visibility = ["@prime//visibility:public"],
)
