"""
Sandbox manifests to learn K8s
"""

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_object(
    name = "secret",
    cluster = "minikube",
    template = "src/secret.yaml",
)

k8s_object(
    name = "persistent_volume",
    cluster = "minikube",
    template = "src/pv.yaml",
)

k8s_objects(
    name = "all",
    objects = [
        ":secret",
        ":persistent_volume",
    ],
    visibility = ["//visibility:public"],
)
