"""

"""

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

k8s_object(
    name = "virtual_service",
    cluster = "minikube",
    template = "virtual-service.yaml",
)

k8s_object(
    name = "service",
    cluster = "minikube",
    template = "service.yaml",
)

k8s_deploy(
    name = "deploy",
    images = {
        "swagger:dzintars": "@prime//containers/swagger:image",
    },
    template = "deployment.yaml",
)

k8s_objects(
    name = "all",
    objects = [
        ":deploy",
        ":service",
        ":virtual_service",
    ],
)
