load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/oswee/prime/pkg/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
