load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@npm//@bazel/concatjs:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "webpack",
    srcs = glob(["src/**/*.ts"]),
    devmode_module = "esnext",
    devmode_target = "esnext",
    module_name = "@oswee/tools/webpack",
    module_root = "src",
    tsconfig = ":tsconfig",
    deps = [
        "@npm//@types/html-webpack-plugin",
        "@npm//@types/node",
        "@npm//@types/webpack",
        "@npm//@types/webpack-dev-server",
        "@npm//@types/yargs",
        "@npm//html-webpack-plugin",
        "@npm//tslib",
        "@npm//webpack",
        "@npm//webpack-dev-server",
        "@npm//yargs",
    ],
)

# TODO: Package these up in a macro?

nodejs_binary(
    name = "devserver",
    data = [
        ":webpack",
    ],
    entry_point = ":src/devserver.ts",
)

nodejs_binary(
    name = "bundle",
    data = [
        ":webpack",
    ],
    entry_point = ":src/bundle.ts",
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//javascript:tsconfig.base.json",
    ],
)
