"""
Minimal working file server for testing purposes
"""

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "http_server_go_lib",
    srcs = ["main.go"],
    importpath = "github.com/oswee/prime/go/cmd/http-server",
    visibility = ["//visibility:private"],
    deps = [],
)

go_binary(
    name = "http-server",
    embed = [":http_server_go_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
